@@ -35,8 +35,11 @@ from conary.streams import StringVersionStream
 
 TROVE_VERSION=10
 
-def troveIsCollection(str):
-    return not(":" in str or str.startswith("fileset-"))
+def troveIsCollection(troveName):
+    return not(":" in troveName or troveName.startswith("fileset-"))
+
+def troveNameIsValid(troveName):
+    return not True in (x in troveName for x in '/[]!~,:=()')
 
 class TroveTuple(streams.StreamSet):
     _SINGLE_TROVE_TUP_NAME    = 0
